# api.yaml
@@ -12,9 +12,10 @@ tags:
 paths:
   /auth/logIn:
     post:
-      tags: 
+      tags:
         - Auth
       summary: login
+      operationId: logIn
       description: users login
       requestBody:
         description: username-password
@@ -32,9 +33,10 @@ paths:
           description: Server Error
   /auth/signUp:
     post:
-      tags: 
+      tags:
         - Auth
       summary: singUp
+      operationId: singUp
       description: users sign up
       requestBody:
         description: username-password-mail
@@ -52,20 +54,22 @@ paths:
           description: Server Error
   /auth/logOut:
     post:
-      tags: 
+      tags:
         - Auth
       summary: logOut
+      operationId: logOut
       description: users log out
       responses:
         200:
           description: Succes
   /admin/stats:
     get:
-      tags: 
+      tags:
         - Admin
-      security: 
+      security:
         - basicAuth: []
       summary: get all system stats
+      operationId: gamesStats
       description: get all
       responses:
         200:
@@ -78,9 +82,10 @@ paths:
           description: Forbiden
   /games:
     post:
-      tags: 
+      tags:
         - Users
       summary: Create game
+      operationId: createGame
       requestBody:
         description: Usuario
         content:
@@ -95,7 +100,7 @@ paths:
                 players:
                   description: usernames
                   type: array
-                  items: 
+                  items:
                     type: string
       responses:
         200:
@@ -103,40 +108,62 @@ paths:
         400:
           description: Bad Request
     get:
-    
-  /game/{id}:
-    patch:
       tags:
-      - Users
+        - Users
+      summary: get all games - filtered
+      operationId: allGames
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: "object"
-              properties:
-                state:
-                  type: "string"
-        required: true
+        - in: query
+          name: date
+          schema:
+            type: string
+          required: false
+        - in: query
+          name: state
+          schema:
+            type: string
+          required: false
       responses:
-        "200":
-          description: "Success"
+        200:
+          description: Success
           content:
             application/json:
-              schema: 
-                $ref: '#/components/schemas/Game'
-        "400":
-          description: "Bad request"
-        "404":
-          description: "Not found"
-        "500":
-          description: "Internal server error"
-
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Games'
+        403:
+          description: Forbiden
+  /games/{id}:
+    patch:
+      tags:
+        - Users
+      summary: update game state
+      operationId: updateGameState
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: state
+          schema:
+            type: string
+          required: true
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Games'
+        400:
+          description: Bad request
+        404:
+          description: Not found
+        500:
+          description: Internal server error
 components:
   schemas:
     Games:
@@ -209,7 +236,7 @@ components:
     SignUp:
       type: object
       properties:
-        mail:
+        email:
           type: string
         username:
           type: string
